<resources>

    <string name="app_name">海豹</string>
    <!-- MainFragmentActivity -->
    <string name="main_fragment_title_name">海豹</string>
    <string name="main_fragment_title_helper">帮手</string>
    <string name="main_fragment_title_poster">海报</string>
    <string name="main_fragment_title_target">目标</string>
    <string name="main_fragment_title_setting">我</string>
    <!-- HerperFragment -->
    <string name="helper_fragment_item_catalog">A</string>
    <string name="helper_fragment_menu_group">创建新群组</string>
    <string name="helper_fragment_menu_black">我的黑名单</string>
    <!-- SettingFragment -->
    <string name="setting_fragment_my_material">我的资料</string>
    <string name="setting_fragment_target_count">目标数</string>
    <string name="setting_fragment_helper_count">帮手数</string>
    <string name="setting_fragment_coin_count">海盗币</string>
    <string name="setting_fragment_other_features">其他功能</string>
    <string name="setting_fragment_richScan">名片扫一扫</string>
    <string name="setting_fragment_shake">摇一摇</string>
    <string name="setting_fragment_setting">设置</string>
    <string name="setting_fragment_health">健康指数</string>
    <!-- SelectGroupMemberActivity -->
    <string name="select_group_member_list_title">创建组</string>
    <string name="select_group_member_list_create">确定</string>
    <string name="select_group_member_list_search">请输入关键字搜索</string>
    <!-- GroupMemberActivity -->
    <string name="group_member_list_textView_modification">确定修改</string>
    <string name="group_member_list_textView_cancel">取消修改</string>
    <!-- DeviceActivity -->
    <string name="device_list_textView_title">设备管理</string>
    <string name="device_list_item_textView_device_name">设备名称:</string>
    <string name="device_list_item_textView_device_time">登录时间:</string>
    <!-- FeedBackActivity -->
    <string name="feedback_textView_title">意见反馈</string>
    <!-- MySettingActivity -->
    <string name="activity_mysetting_textView_title">设置</string>
    <string name="activity_mysetting_textView_accept_push_msg">接收新消息提醒</string>
    <string name="activity_mysetting_textView_helper_verification">添加好友时需要验证</string>
    <string name="activity_mysetting_textView_public_helper">自荐为海豹公共帮手</string>
    <string name="activity_mysetting_textView_device">设备管理</string>
    <string name="activity_mysetting_textView_version">检查更新</string>
    <string name="activity_mysetting_textView_introduce">使用介绍</string>
    <string name="activity_mysetting_textView_datasize">清理存储空间</string>
    <string name="activity_mysetting_textView_feedBack">意见反馈</string>
    <string name="activity_mysetting_textView_clause">隐私与条款</string>
    <string name="activity_mysetting_textView_about">关于我们</string>
    <!-- PersonalActivity -->
    <string name="personal_my_material">我的资料</string>
    <string name="personal_textView_mobile">电话:</string>
    <string name="personal_textView_email">邮箱:</string>
    <string name="personal_textView_company">公司:</string>
    <string name="personal_textView_title">职务:</string>
    <string name="personal_textView_address">地址:</string>
    <string name="personal_textView_comment">个人简介</string>
    <string name="personal_textView_other_data">其他资料</string>
    <!-- PersonalEditActivity -->
    <string name="personal_edit_title">编辑资料</string>
    <string name="personal_edit_textView_determine">确定</string>
    <string name="personal_edit_textView_name">姓名:</string>
    <string name="personal_edit_textView_sign">签名:</string>
    <string name="personal_edit_textView_mobile">电话:</string>
    <string name="personal_edit_textView_email">邮箱:</string>
    <string name="personal_edit_textView_company">公司:</string>
    <string name="personal_edit_textView_title">职务:</string>
    <string name="personal_edit_textView_address">地址:</string>
    <!-- ContactHelperActivity -->
    <string name="contact_helper_list_alert_text">如果你已赋予小罗权限，请耐心等待！联系人正在匹配中。。。</string>
    <string name="contact_helper_list_title">通讯录</string>
    <string name="contact_helper_list_filter_edit">请输入关键字搜索</string>
    <string name="contact_helper_list_item_mybutton">邀请</string>
    <!-- BlackHelperActivity -->
    <string name="black_helper_list_title">黑名单</string>
    <string name="black_helper_list_item_mybutton">解除阻止</string>
    <!-- NewHelperActivity -->
    <string name="new_helper_list_title">新的朋友</string>
    <string name="new_helper_list_filter_edit">请输入关键字搜索</string>
    <string name="new_helper_list_textView_contacts">添加通讯录好友</string>
    <string name="new_helper_list_textView_serach_title">搜索到的好友</string>
    <string name="new_helper_list_textView_serach_add">邀请</string>
    <string name="new_helper_list_textView_serach_invite">添加</string>
    <string name="new_helper_list_textView_newHelper_title">收到的邀请</string>
    <string name="new_helper_list_item_mybutton_one">待验证</string>
    <string name="new_helper_list_item_mybutton_three">已添加</string>
    <string name="new_helper_list_item_mybutton_five">接受</string>
    <!-- RecommendHelperActivity -->
    <string name="recommend_helper_list_title">推荐帮手</string>
    <string name="recommend_helper_list_filter_edit">请输入关键字搜索</string>
    <string name="recommend_helper_list_textView_searchResult">抱歉，未找到相关信息!</string>
    <!-- HelperDetailActivity -->
    <string name="helper_detail_textView_coinCount">海盗币</string>
    <string name="helper_detail_textView_helperCount">帮手数</string>
    <string name="helper_detail_textView_targetCount">目标数</string>
    <!-- PublicDetailActivity -->
    <string name="public_detail_textView_viewCount">浏览数</string>
    <string name="public_detail_textView_helperCount">帮手数</string>
    <string name="public_detail_textView_targetCount">目标数</string>
    <!-- GroupListDialogActivity -->
    <string name="group_list_dialog_textView_title">选择组</string>
    <string name="group_list_dialog_button_yes">确定</string>
    <string name="group_list_dialog_button_no">取消</string>
    <!-- UpdateMemoNameDialogActivity -->
    <string name="update_memoName_dialog_editText_memoName">备注名:</string>
    <string name="update_memoName_dialog_textview_yes">确定</string>
    <string name="update_memoName_dialog_textview_no">取消</string>
    <!-- AddHelperDialogActivity -->
    <string name="addhelper_dialog_editText_msg">验证信息:</string>
    <string name="addhelper_dialog_textview_yes">确定</string>
    <string name="addhelper_dialog_textview_no">取消</string>
    <!-- SelectTargetMemberActivity -->
    <string name="select_target_member_list_textView_contacts">添加通讯录好友</string>
    <!-- MyDialogActivity -->
    <string name="my_dialog_textView_title">提示</string>
    <string name="my_dialog_textView_content">该设备被踢出</string>
    <string name="my_dialog_textView_OK">OK</string>
    <!-- RespondDuangDialogActivity -->
    <string name="respond_duang_dialog_textView_title">提示</string>
    <string name="respond_duang_dialog_textView_content">你被duang了一下！</string>
    <string name="respond_duang_dialog_textView_cancel">取消</string>
    <!-- RespondNewDeviceDialogActivity -->
    <string name="respond_new_device_dialog_textView_title">提示</string>
    <string name="respond_new_device_dialog_textView_content">你有新设备登录！</string>
    <string name="respond_new_device_dialog_textView_cancel">取消</string>
    <!-- HealthIndexActivity -->
    <string name="health_index_text_one">欢迎使用海豹</string>
    <string name="health_index_text_two">ReadyGooo!</string>
    <string name="health_index_text_first">取消</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="target_sch_SayWhat">说点什么吧</string>
    <string name="target_sch_Release">发送</string>
    <string name="target_sch_ScheduleUpdatesAreSubmitted">进度更新正在提交</string>
    <string name="target_sch_ScheduleUpdatesFailedToCommit">进度更新提交失败</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="attention">关注</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>

    <!-- 图片保存的文字 -->
    <string name="target_modification_open">公开</string>
    <string name="target_modification_unOpen">非公开</string>
    <string name="target_modification_permanent">永久</string>
    <string name="target_modification_timeLimit">限时</string>

</resources>
