<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dip"
    android:layout_centerInParent="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/alert_background"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:gravity="center"
            android:text="@string/respond_duang_dialog_textView_title"
            android:textColor="#ff0000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/respond_duang_dialog_textView_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/respond_duang_dialog_textView_content"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/respond_duang_dialog_textView_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:gravity="center"
            android:text="@string/respond_duang_dialog_textView_cancel"
            android:background="@drawable/button_alert_press"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>