<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#edeef0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:background="@color/main_color" >

        <RelativeLayout
            android:id="@+id/recommend_helper_list_button_back"
            android:layout_width="55dip"
            android:layout_height="55dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/back" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/recommend_helper_list_progressb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/recommend_helper_list_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/recommend_helper_list_button_back"
            android:gravity="center"
            android:text="@string/recommend_helper_list_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.helper.mistletoe.v.ClearEditText
        android:id="@+id/recommend_helper_list_filter_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_edit_selector"
        android:drawableLeft="@drawable/search_bar_icon_normal"
        android:hint="@string/recommend_helper_list_filter_edit"
        android:singleLine="true"
        android:textSize="15.0dip" />

    <TextView
        android:id="@+id/recommend_helper_list_textView_searchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recommend_helper_list_textView_searchResult" />

    <com.helper.mistletoe.v.refrenshellview.PullToRefreshListView
        android:id="@+id/main_shoot_listview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:divider="#50C0C0C0"
        android:dividerHeight="1px" >
    </com.helper.mistletoe.v.refrenshellview.PullToRefreshListView>

    <Button
        android:id="@+id/recommend_helper_list_button_verification"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#259b24"
        android:textColor="#ffffff" />

</LinearLayout>