<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/personal_code_top"
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:background="@color/main_color" >

        <LinearLayout
            android:id="@+id/personal_edit_linearLayout_back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="15dip"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/personal_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/personal_edit_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/personal_edit_linearLayout_determine"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/personal_edit_textView_determine"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:text="@string/personal_edit_textView_determine"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <com.helper.mistletoe.v.snaimageview.v2.SnaImageViewV2
            android:id="@+id/personal_edit_imageView_head"
            android:layout_width="75dip"
            android:layout_height="75dip"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:src="@drawable/default_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dip" >

            <TextView
                android:id="@+id/personal_edit_textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/personal_edit_textView_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/personal_edit_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="vertical"
            android:padding="10dip"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:text="@string/personal_edit_textView_name"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:ems="10"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/personal_edit_textView_sign"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_comment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/personal_edit_textView_mobile"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/personal_edit_editText_moilbe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:text="@string/personal_edit_textView_email"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:text="@string/personal_edit_textView_company"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_company"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/personal_edit_textView_title"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:gravity="center_vertical"
                    android:text="@string/personal_edit_textView_address"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personal_edit_editText_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPostalAddress" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>