<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:background="@color/main_color" >

        <TextView
            android:id="@+id/contact_helper_list_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/contact_helper_list_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <RelativeLayout
            android:id="@+id/contact_helper_list_relativeLayout_back"
            android:layout_width="55dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/back" />
        </RelativeLayout>
        
    </RelativeLayout>

    <com.helper.mistletoe.v.ClearEditText
        android:id="@+id/contact_helper_list_filter_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_edit_selector"
        android:drawableLeft="@drawable/search_bar_icon_normal"
        android:hint="@string/contact_helper_list_filter_edit"
        android:singleLine="true"
        android:textSize="15.0dip" />

    <TextView
        android:id="@+id/contact_helper_list_textView_alert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/contact_helper_list_alert_text"
        android:textColor="#ff4500"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/contact_helper_list_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:divider="#50C0C0C0"
            android:dividerHeight="1px"/>

        <TextView
            android:id="@+id/contact_helper_list_textview_dialog"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_gravity="center"
            android:background="@drawable/dialog"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="36.0dip"
            android:visibility="invisible" />

        <com.helper.mistletoe.v.SideBar
            android:id="@+id/contact_helper_list_sidrbar"
            android:layout_width="30.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center" />
    </FrameLayout>

</LinearLayout>